Added detailed posts, API functionality

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>Chattucino</title>
 </head>
 <body>
@@ -27,4 +30,7 @@
 
     {% endblock %}
 </body>
+<footer>
+    Copyright © <span id="copyright">Chattucino</span> 2022.
+</footer>
 </html>
