--- a/static/styles.css
+++ b/static/styles.css
@@ -1,13 +1,42 @@
 body {
     background-color: #F4DFBA;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+header {
+    width: 100vw;
+    text-align: center;
+}
+
+#logo {
+    display: inline-block;
+    vertical-align: text-top;
+    margin-top: -2.5px;
 }
 
 .post {
-    background-color: #EEC373;
+    /* background-color: #EEC373; */
+    background-color: #f2e6d2;
     width: 440px;
     border: 1px solid #876445;
     box-shadow: 0 0 5px #CA965C;
     padding: 10px;
+    margin: 10px 0;
+    border-radius: 10px;
+    font-family: 'Roboto', sans-serif;
+}
+
+.post .clickables {
+    display: flex;
+    justify-content: space-between;
+}
+
+.post .clickables a {
+    text-decoration: none;
+    color: darkslategrey;
 }
 
 .title {
@@ -15,7 +44,7 @@ body {
     justify-content: space-between;
 }
 
-.title p {
+.title p, .weather {
     margin: 0;
 }
 
@@ -29,17 +58,52 @@ body {
     margin: 0 5px 0 0;
 }
 
+.weather_icon {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+/* .details span {
+    font-weight: bold;
+} */
+
+.username {
+    font-weight: bolder;
+}
+
+#map {
+    width: 400px;
+    border: 2px solid #CA965C;
+}
+
 /* .flair {
     background-color: rgba(255, 0, 0, 0.3);
 } */
 
 #app_heading {
     font-family: 'Cookie', cursive;
+    font-size: 45px;
+    border-bottom: 2px solid #876445;
+    margin: 10px auto 0 auto;
+    padding-bottom: 5px;
 }
 
 img {
     width: 40px;
 }
+
+footer {
+    color: rgb(89, 89, 89);
+    position: fixed;
+    bottom: 20px;
+}
+
+#copyright {
+    text-decoration: underline;
+
+}
+
+
 
 /* Flair Stylers */
 .Just_Chat {
