--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -5,7 +5,9 @@
 <div class="post">
     <div class="title">
         <span class="flair {{ post['flair'].replace(' ', '_') }}">{{ post['flair'] }}</span>
-        <p>X/{{ post['max_people'] }} Keen as a Bean</p>
+        {% if post['date']>today %}
+            <p>{{ post['interested'] }} Keen as a Bean</p>
+        {% endif %}
     </div>
     <div class="content">
         <p class="username">{{ post['name'] }}:</p>
@@ -13,12 +15,18 @@
             <span>#Chattucino</span> at <span>{{ post['location'] }}</span> on <span>{{ post['date'] }}</span>
         </p>
     </div>
-    <div>
+    <div class="weather_div">
         <p class="weather">
             <span>Weather:</span> <img src="{{ post['icon'] }}" alt="" class="weather_icon"> {{ post['weather'] }} {{ post['temperature'] }}&#176;C 
         </p>
     </div>
     <img src="{{ map_url }}" alt="" id="map">
+    <div id="interested_div">
+        <h3 id="interest">Espresso'd Interest</h3>
+        {% for name in users_interested[0] %}
+            <p class="interested">{{ name }}</p>
+        {% endfor %}
+    </div>
     
 </div>
 
