--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -2,28 +2,42 @@
 
 {% block content %}
 
-<a href="/">Return home</a>
-<div>
-    <h2>Create an Account</h2>
-    <form action="/signup_action" method="POST">
-        <input type="hidden" name="id">
-        <div>
-            Name: <input name="name" type="text">
-        </div>
-        <div>
-            Email: <input name="email" type="text">
-        </div>
-        <div>
-            Password: <input name="password" type="text">
-        </div>
-        <div>
-            Confirm Password: <input name="confirm" type="text">
-        </div>
-        <div>
-            Favourite Coffee: <input name="fav_coffee" type="text">
-        </div>
-        <input type="submit" value="Sign-Up">
-    </form>
-</div>
+    <a href="/">Return home</a>
+    <div id="signup_box">
+        <h2>Create an Account</h2>
+        <form action="/signup_action" method="POST" id="signup_form">
+            <input type="hidden" name="id">
+            <div>
+                Name: <input name="name" type="text">
+            </div>
+            <div>
+                Email: <input name="email" type="text">
+            </div>
+            <div>
+                Password: <input name="password" type="text">
+            </div>
+            <div>
+                Confirm Password: <input name="confirm" type="text">
+            </div>
+            <div>
+                Favourite Coffee: <select name="fav_coffee">
+                    <option value="Flat White">Flat White</option>
+                    <option value="Cappucino">Cappucino</option>
+                    <option value="Latte">Latte</option>
+                    <option value="Magic">Magic</option>
+                    <option value="Long Black">Long Black</option>
+                    <option value="Espresso">Espresso</option>
+                    <option value="Mocha">Mocha</option>
+                    <option value="Cold Brew">Cold Brew</option>
+                </select>
+            </div>
+            <div id="signup_button">
+                <br>
+                <input type="submit" value="Sign-Up" >
+                <br>
+            </div>
+
+        </form>
+    </div>
 
 {% endblock %}
