--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -2,4 +2,51 @@
 
 {% block content %}
 
+<div id="details">
+    <div id="personal_details">
+        <p class="username">{{ profile_info['name'] }}</p>
+        <p class="age">{{ profile_info['age'] }}</p>
+        <p class="hometown">{{ profile_info['hometown'] }}</p>
+    </div>
+    <p class="about">{{ profile_info['about'] }}</p>
+    {% if user_id == id %}
+        <form action="/update_profile" method="GET" id="update">
+            <input type="submit" value="Update Profile">
+        </form>
+    {% endif %}
+</div>
+
+{% for post in posts %}
+        <div class="post">
+            <div class="title">
+                <span class="flair {{ post['flair'].replace(' ', '_') }}">{{ post['flair'] }}</span>
+                {% if post['date']>today %}
+                    <p>{{ post['interested'] }} Keen as a Bean</p>
+                {% endif %}
+            </div>
+            <div class="content">
+                <p class="username">{{ post['name'] }}:</p>
+                <p class="details">
+                    <span>#Chattucino</span> at <span>{{ post['location'] }}</span> on <span>{{ post['date'] }}</span>
+                </p>
+            </div>
+            {% if post['date']>today %}
+                <div style="padding-top: 5px;">
+                    <p class="weather">
+                        <span>Weather:</span> <img src="{{ post['icon'] }}" alt="" class="weather_icon"> {{ post['weather'] }} {{ post['temperature'] }}&#176;C 
+                    </p>
+                </div>
+            {% endif %}
+            <div class="clickables">
+                <a href="/post_detail?post_id={{ post['post_id'] }}" style="padding-bottom: -3px;position: relative;bottom: -4px;font-size: 15px;">More Detail...</a>
+                {% if post['date']>today or user_cookie!=None %}
+                    <form action="/request_to_go" class="button" method="POST">
+                        <input type="hidden" name="post_id" value="{{ post['post_id'] }}">
+                        <input type="submit" value="I'm Interested" />
+                    </form>
+                {% endif %}
+            </div>
+
+        </div>
+    {% endfor %}
 {% endblock %}
