Fixed confirm going & link to profiles

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,11 +33,11 @@
         </div>
 
     </header>
+    <div id="body_div">
+        {% block content %}
 
-    {% block content %}
-
-    {% endblock %}    
-
+        {% endblock %} 
+    </div>
 
     <footer>
         Copyright © <span id="copyright">Chattucino</span> 2022.
