--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -22,6 +22,7 @@
         <a href="/about" class="head_button">About</a>
         <a href="/login" class="head_button">Login</a>
     </header>
+<div id="body_div">
     <div id="front_body">
         <aside id="front_page">
             <h1 id="second_heading">Meet up over a <span id="front_logo">Chattucino</span></h1>
@@ -30,10 +31,12 @@
             Simply make an account, create or join a Chattucino and meet-up. 
             <br>
             <br>
+
             <a href="/signup" class="head_button" id="front_join">Join Us</a>
         </aside>
         <img src="/static/front_logo.png" alt="" id="front_img">
     </div>
+</div>
 
 
 </body>
