--- a/templates/update.html
+++ b/templates/update.html
@@ -4,7 +4,7 @@
     <div>
         <h2>Create an Account</h2>
         <form action="/update_action" method="POST" id="update_form">
-            <input type="hidden" name="id">
+            <input type="hidden" name="id" value="{{ user_id }}">
             <div>
                 About: <input name="about" type="text">
             </div>
