--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
                 Email: <input name="email" type="text">
             </div>
             <div>
-                Password: <input name="password" type="text">
+                Password: <input name="password" type="password">
             </div>
             <div id="new_button">
                 <br>
