--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -16,14 +16,14 @@
     {% endif %}
 </div>
 
-
-
 {% for post in posts %}
         <div class="post">
             <div class="title">
                 <span class="flair {{ post['flair'].replace(' ', '_') }}">{{ post['flair'] }}</span>
                 {% if post['date']>today %}
                     <p>{{ post['interested'] }} Keen as a Bean</p>
+                {% else %}
+                    <p class="expired">Expired</p>
                 {% endif %}
             </div>
             <div class="content">
@@ -41,7 +41,7 @@
             {% endif %}
             <div class="clickables">
                 <a href="/post_detail?post_id={{ post['post_id'] }}" style="padding-bottom: -3px;position: relative;bottom: -4px;font-size: 15px;">More Detail...</a>
-                {% if post['date']>today or user_cookie!=None %}
+                {% if post['date']>today and user_cookie!=None and post['user_id']!=user_id%}
                     <form action="/request_to_go" class="button" method="POST">
                         <input type="hidden" name="post_id" value="{{ post['post_id'] }}">
                         <input type="submit" value="I'm Interested" />
