--- a/static/styles.css
+++ b/static/styles.css
@@ -17,8 +17,9 @@ a {
     padding-top: 30px;
     padding-bottom: 60px;
     /* height: 85vh; */
+    min-height: 100vh;
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     flex-direction: column;
     align-items: center;
     margin-top: -20px;
