--- a/templates/home.html
+++ b/templates/home.html
@@ -29,7 +29,7 @@
             {% endif %}
             <div class="clickables">
                 <a href="/post_detail?post_id={{ post['post_id'] }}" style="padding-bottom: -3px;position: relative;bottom: -4px;font-size: 15px;">More Detail...</a>
-                {% if post['date']>today and user_cookie!=None and post['user_id']!=user_id and post['max_people']>post['going'] %}
+                {% if post['date']>today and user_cookie!=None and post['user_id']!=user_id and post['max_people']>post['going'] and user_id not in post['going_check'] %}
                     <form action="/request_to_go" class="button" method="POST">
                         <input type="hidden" name="post_id" value="{{ post['post_id'] }}">
                         <input type="submit" value="I'm Interested" />
