--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -12,16 +12,18 @@
         {% endif %}
     </div>
     <div class="content">
-        <p class="username">{{ post['name'] }}:</p>
+        <a href="/user?id={{ post['user_id'] }}" class="username">{{ post['name'] }}:</a>
         <p class="details">
-            <span>#Chattucino</span> at <span>{{ post['location'] }}</span> on <span>{{ post['date'] }}</span>
+            <span>#Chattucino</span> in <span>{{ post['location'] }}</span> on <span>{{ post['date'] }}</span>
         </p>
     </div>
-    <div class="weather_div">
-        <p class="weather">
-            <span>Weather:</span> <img src="{{ post['icon'] }}" alt="" class="weather_icon"> {{ post['weather'] }} {{ post['temperature'] }}&#176;C 
-        </p>
-    </div>
+    {% if post['date']>today %}
+        <div class="weather_div">
+            <p class="weather">
+                <span>Weather:</span> <img src="{{ post['icon'] }}" alt="" class="weather_icon"> {{ post['weather'] }} {{ post['temperature'] }}&#176;C 
+            </p>
+        </div>
+    {% endif %}
     <img src="{{ map_url }}" alt="" id="map">
     <div id="interested_div">
         <h3 id="interest">Espresso'd Interest</h3>
