--- a/templates/update.html
+++ b/templates/update.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div>
-        <h2>Create an Account</h2>
+        <h2>Update account info</h2>
         <form action="/update_action" method="POST" id="update_form">
             <input type="hidden" name="id" value="{{ user_id }}">
             <div>
